rancher/v1.0/en/contributing/index.md
---
title: Contributing to Rancher
layout: rancher-default-v1.0
version: v1.0
lang: en
---

## Contributing to Rancher
---

### Developing

In our GitHub [repository](https://github.com/rancher/rancher), our wiki contains all the steps to get started with developing Rancher.

Start with our first [cowpoke](https://github.com/rancher/rancher/wiki/Cowpoke-1:-Getting-Started-with-Rancher) to get started!

### Repositories

All of repositories are located within our main GitHub [page](https://github.com/rancher). There are many repositories used for Rancher, but we'll provide descriptions of some of the main ones used in Rancher.

[Rancher Repo](https://github.com/rancher/rancher): This repo is the main repo that integrates all the other repos together. 

[Cattle Repo](https://github.com/rancher/cattle): This repo is where the functionality of Rancher is developed. 

[UI Repo](https://github.com/rancher/ui): This repo is where all the UI for Rancher is developed. 

[Community Catalog Repo](https://github.com/rancher/community-catalog): This repo has all community contributed templates for the [Rancher Catalog]({{site.baseurl}}/rancher/{{page.version}}/{{page.lang}}/catalog). We welcome community contributions to the Rancher templates. 

[Rancher-Compose Repo](https://github.com/rancher/rancher-compose): This repo is what the [rancher-compose]({{site.baseurl}}/rancher/{{page.version}}/{{page.lang}}/rancher-compose/) CLI is based on. It's synced with docker/libcompose. 

### Bugs

If you find any bugs or are having any trouble, please contact us by filing an [issue](https://github.com/rancher/rancher/issues/new). Though we have many repositories related to Rancher, we want the majority of the bugs in the [Rancher repo](https://github.com/rancher/rancher) so we won't miss them!

If you have any updates to our documentation, please make any PRs to our [docs repo](https://github.com/rancher/rancher.github.io) or click on the **Edit this page** to be taken directly to the page. 
<br>
<br>